cmake: made it build, adjust binary io
git-svn-id: http://svn.netlabs.org/repos/ports/cmake/trunk@1858 8d6eb4b1-0faa-de11-b929-00e081727c95

--- a/Modules/CMakeFortranCompiler.cmake.in
+++ b/Modules/CMakeFortranCompiler.cmake.in
@@ -20,6 +20,10 @@ if(CMAKE_COMPILER_IS_CYGWIN)
   set(UNIX 1)
 endif()
 
+if(CMAKE_COMPILER_IS_GNUCC)
+  set(UNIX 1)
+endif()
+
 set(CMAKE_Fortran_COMPILER_ENV_VAR "FC")
 
 set(CMAKE_Fortran_COMPILER_SUPPORTS_F90 @CMAKE_Fortran_COMPILER_SUPPORTS_F90@)
