don't use CMakeServerLib for now in tests as well

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -213,7 +213,9 @@ if(BUILD_TESTING)
   if(NOT CMake_TEST_EXTERNAL_CMAKE)
     add_subdirectory(CMakeLib)
 
+   if(NOT OS2)
     add_subdirectory(CMakeServerLib)
+   endif()
   endif()
   add_subdirectory(CMakeOnly)
   add_subdirectory(RunCMake)
