overcome a environ definition issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -738,7 +738,9 @@ if(NOT CMake_TEST_EXTERNAL_CMAKE)
   else()
     include(CheckSymbolExists)
     CHECK_SYMBOL_EXISTS(unsetenv "stdlib.h" HAVE_UNSETENV)
+    if(NOT OS2)
     CHECK_SYMBOL_EXISTS(environ "stdlib.h" HAVE_ENVIRON_NOT_REQUIRE_PROTOTYPE)
+    endif()
   endif()
 endif()
 
