Make it compile
Signed-off-by: Paul Smedley <paul@smedley.id.au>

--- a/Utilities/cmlibuv/CMakeLists.txt
+++ b/Utilities/cmlibuv/CMakeLists.txt
@@ -128,6 +128,7 @@ if (OS2)
   list(APPEND uv_sources
     src/unix/os2-syscalls.c
     src/unix/no-fsevents.c
+    src/unix/no-proctitle.c
     src/unix/posix-hrtime.c
     src/unix/posix-poll.c
     )
